# zero2prod

./: .dockerignore  Cargo.toml  Dockerfile  README.md
.cargo/: config.toml
.github/workflows/: audit-on-push.yml  general.yml  scheduled-audit.yml
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
